로그인 연결

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="sub-menu">
         <ul class="menu">
           <li>
-            <a href="javascript(0)">Sign In</a>
+            <a href="/signin">Sign In</a>
           </li>
           <li>
             <a href="javascript(0)">My Starbucks</a>
